# HDSbox

./: .gitignore  README.md  config.py  main.py  models.py  requirements.txt  s3_client.py  s3_scanner.py  sync_engine.py  tray.py  watcher.py
distribution/: build_macos.sh  build_windows.bat  create_icns.sh  pyproject.toml  s3sync.spec  s3sync_macos.spec
ui/: __init__.py  settings.py
