# S3Sync - pyproject.toml
# Build configuration for packaging

[project]
name = "s3sync"
version = "1.0.0"
description = "A cross-platform desktop application that syncs a local folder to S3-compatible storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "S3Sync Developer" }
]
keywords = ["s3", "sync", "backup", "aws", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "boto3>=1.34.0",
    "watchdog>=4.0.0",
    "pystray>=0.19.5",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "types-Pillow",
    "boto3-stubs[s3]",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
s3sync = "main:main"

[project.gui-scripts]
S3Sync = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "watcher", "sync_engine", "s3_client", "tray", "config", "models"]
packages = ["ui"]

# ============================================
# PyInstaller Configuration
# ============================================
# macOS: See s3sync_macos.spec
# Windows: See s3sync.spec

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
